Pruebas de 3er ranking y avances de carry